--- a/smart keyword search Extension/Resources/manifest.json
+++ b/smart keyword search Extension/Resources/manifest.json
@@ -11,27 +11,30 @@
         "96": "images/icon-96.png",
         "128": "images/icon-128.png",
         "256": "images/icon-256.png",
-        "512": "images/icon-512.png"
+        "512": "images/icon-512.png",
+        "1024": "images/icon-1024.png"
     },
 
     "background": {
-        "scripts": [ "background.js" ]
+        "page": "background.html"
     },
-
-    "content_scripts": [{
-        "js": [ "content.js" ],
-        "matches": [ "*://example.com/*" ]
-    }],
 
     "browser_action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "16": "images/toolbar-icon-16.png",
-            "19": "images/toolbar-icon-19.png",
-            "32": "images/toolbar-icon-32.png",
-            "38": "images/toolbar-icon-38.png"
+            "16": "images/icon-toolbar-16.png",
+            "19": "images/icon-toolbar-19.png",
+            "32": "images/icon-toolbar-32.png",
+            "38": "images/icon-toolbar-38.png"
         }
     },
 
-    "permissions": [ ]
+    "permissions": [
+        "https://www.google.com/search",
+        "https://search.yahoo.com/search",
+        "https://www.bing.com/search",
+        "https://duckduckgo.com/",
+        "webRequest",
+        "storage",
+    ]
 }
