Prepare for app store; update icon

--- a/smart keyword search Extension/Resources/manifest.json
+++ b/smart keyword search Extension/Resources/manifest.json
@@ -35,6 +35,6 @@
         "https://www.bing.com/search",
         "https://duckduckgo.com/",
         "webRequest",
-        "storage",
+        "storage"
     ]
 }
