--- a/smart keyword search Extension/Resources/manifest.json
+++ b/smart keyword search Extension/Resources/manifest.json
@@ -30,11 +30,14 @@
     },
 
     "permissions": [
+        "*://*/*",
         "https://www.google.com/search",
         "https://www.ecosia.org/search",
         "https://search.yahoo.com/search",
         "https://www.bing.com/search",
         "https://duckduckgo.com/",
+        "declarativeNetRequestWithHostAccess",
+        "declarativeNetRequestFeedback",
         "webRequest",
         "storage"
     ]
