--- a/smart keyword search Extension/Resources/manifest.json
+++ b/smart keyword search Extension/Resources/manifest.json
@@ -1,10 +1,10 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "default_locale": "en",
 
     "name": "__MSG_extension_name__",
     "description": "__MSG_extension_description__",
-    "version": "1.6.1",
+    "version": "2.0",
 
     "icons": {
         "48": "images/icon-48.png",
@@ -28,14 +28,16 @@
             "38": "images/icon-toolbar-38.png"
         }
     },
-
-    "permissions": [
+    "optional_host_permissions": [
+        "*",
         "https://www.google.com/search",
         "https://www.ecosia.org/search",
         "https://search.yahoo.com/search",
         "https://www.bing.com/search",
         "https://duckduckgo.com/",
-        "webRequest",
-        "storage"
+    ],
+    "permissions": [
+        "storage",
+        "webNavigation"
     ]
 }
