--- a/smart keyword search Extension/Resources/manifest.json
+++ b/smart keyword search Extension/Resources/manifest.json
@@ -1,10 +1,10 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "default_locale": "en",
 
     "name": "__MSG_extension_name__",
     "description": "__MSG_extension_description__",
-    "version": "1.5",
+    "version": "1.8",
 
     "icons": {
         "48": "images/icon-48.png",
@@ -19,7 +19,7 @@
         "page": "background.html"
     },
 
-    "browser_action": {
+    "action": {
         "default_popup": "popup.html",
         "default_icon": {
             "16": "images/icon-toolbar-16.png",
@@ -28,16 +28,16 @@
             "38": "images/icon-toolbar-38.png"
         }
     },
-
-    "permissions": [
-        "*://*/*",
+    "optional_host_permissions": [
         "https://www.google.com/search",
         "https://www.ecosia.org/search",
         "https://search.yahoo.com/search",
         "https://www.bing.com/search",
-        "https://duckduckgo.com/",
+        "https://duckduckgo.com/"
+    ],
+
+    "permissions": [
         "declarativeNetRequestWithHostAccess",
-        "declarativeNetRequestFeedback",
         "webRequest",
         "storage"
     ]
