--- a/smart keyword search Extension/Resources/manifest.json
+++ b/smart keyword search Extension/Resources/manifest.json
@@ -4,7 +4,7 @@
 
     "name": "__MSG_extension_name__",
     "description": "__MSG_extension_description__",
-    "version": "2.0",
+    "version": "1.7",
 
     "icons": {
         "48": "images/icon-48.png",
@@ -19,7 +19,7 @@
         "page": "background.html"
     },
 
-    "browser_action": {
+    "action": {
         "default_popup": "popup.html",
         "default_icon": {
             "16": "images/icon-toolbar-16.png",
@@ -29,7 +29,6 @@
         }
     },
     "optional_host_permissions": [
-        "*",
         "https://www.google.com/search",
         "https://www.ecosia.org/search",
         "https://search.yahoo.com/search",
