back to manifest v2?

--- a/smart keyword search Extension/Resources/manifest.json
+++ b/smart keyword search Extension/Resources/manifest.json
@@ -1,10 +1,10 @@
 {
-    "manifest_version": 3,
+    "manifest_version": 2,
     "default_locale": "en",
 
     "name": "__MSG_extension_name__",
     "description": "__MSG_extension_description__",
-    "version": "1.7.1.2",
+    "version": "1.7.1.3",
 
     "icons": {
         "48": "images/icon-48.png",
@@ -16,11 +16,11 @@
     },
 
     "background": {
-        "service_worker": "background.js",
+        "page": "background.html",
         "type": "module"
     },
 
-    "action": {
+    "browser_action": {
         "default_popup": "popup.html",
         "default_icon": {
             "16": "images/icon-toolbar-16.png",
@@ -29,14 +29,12 @@
             "38": "images/icon-toolbar-38.png"
         }
     },
-    "host_permissions": [
+    "permissions": [
         "https://www.google.com/search",
         "https://www.ecosia.org/search",
         "https://search.yahoo.com/search",
         "https://www.bing.com/search",
-        "https://duckduckgo.com/"
-    ],
-    "permissions": [
+        "https://duckduckgo.com/",
         "webNavigation",
         "storage"
     ]
