--- a/smart keyword search Extension/Resources/manifest.json
+++ b/smart keyword search Extension/Resources/manifest.json
@@ -4,7 +4,7 @@
 
     "name": "__MSG_extension_name__",
     "description": "__MSG_extension_description__",
-    "version": "1.7.1.4",
+    "version": "1.7.1.5",
 
     "icons": {
         "48": "images/icon-48.png",
@@ -35,7 +35,7 @@
         "https://search.yahoo.com/search",
         "https://www.bing.com/search",
         "https://duckduckgo.com/",
-        "webRequest",
+        "webNavigation",
         "storage"
     ]
 }
